--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <div id="responseBox"></div>
 
     <button id="shareButton" class="whatsapp-btn" onclick="shareWhatsApp()" style="display: none;">ðŸ“² Share on WhatsApp</button>
-    <button class="whatsapp-btn" onclick="window.open('https://whatsapp.com/channel/0029VajZpqL7T8bRvUqAU23A', '_blank')">ðŸ“¢ Join WhatsApp Channel</button>
+    <button class="whatsapp-btn" onclick="window.open('https://whatsapp.com/channel/0029Vb4pFXjHgZWh7cPrVa3G')">ðŸ“¢ Join WhatsApp Channel</button>
     <button class="telegram-btn" onclick="window.open('https://t.me/SSMODSdsOfficiall, '_blank')">âœˆï¸ Join Telegram Channel</button>
   </div>
 
