--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
     .box {
       background: #111;
-      border: 2px solid red;
-      box-shadow: 0 0 25px red;
+      border: 2px solid black;
+      box-shadow: 0 0 25px black;
       padding: 30px 20px;
       border-radius: 15px;
       width: 100%;
