--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   <div class="box">
     <SMMODS(SHAHZAD MADNI) DB</h2>
     <input type="text" id="number" placeholder="Enter phone number" required />
-    <button onclick="fetchData()">ðŸ”Ž Get Details</button>
+    <button onclick="fetchData()">Get Details</button>
 
     <div id="responseBox"></div>
 
