--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
     .box {
       background: #111;
-      border: 2px solid black;
-      box-shadow: 0 0 25px black;
+      border: 2px solid red;
+      box-shadow: 0 0 25px red;
       padding: 30px 20px;
       border-radius: 15px;
       width: 100%;
@@ -100,14 +100,14 @@
 </head>
 <body>
   <div class="box">
-    <SMMODS(SHAHZAD MADNI) DB</h2>
+    <h2>ðŸ” SSMODS DB</h2>
     <input type="text" id="number" placeholder="Enter phone number" required />
-    <button onclick="fetchData()">Get Details</button>
+    <button onclick="fetchData()">ðŸ”Ž Get Details</button>
 
     <div id="responseBox"></div>
 
     <button id="shareButton" class="whatsapp-btn" onclick="shareWhatsApp()" style="display: none;">ðŸ“² Share on WhatsApp</button>
-    <button class="whatsapp-btn" onclick="window.open('https://whatsapp.com/channel/0029Vb4pFXjHgZWh7cPrVa3G')">ðŸ“¢ Join WhatsApp Channel</button>
+    <button class="whatsapp-btn" onclick="window.open('https://whatsapp.com/channel/0029VajZpqL7T8bRvUqAU23A', '_blank')">ðŸ“¢ Join WhatsApp Channel</button>
     <button class="telegram-btn" onclick="window.open('https://t.me/SSMODSdsOfficiall, '_blank')">âœˆï¸ Join Telegram Channel</button>
   </div>
 
