--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 </head>
 <body>
   <div class="box">
-    <h2>ðŸ” SSMODS DB</h2>
+    <h2>ðŸ” SMMODS(MADNI) DB</h2>
     <input type="text" id="number" placeholder="Enter phone number" required />
     <button onclick="fetchData()">ðŸ”Ž Get Details</button>
 
